welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:5: error: not found: value estSirBiscuit
if(estSirBiscuit) {
   ^Program:6: error: not found: value perndBiscuit
	perndBiscuit();
        ^